  the "always link" flag on all units of the given library.
  (Xavier Leroy)

- GPR#1027: various improvements to -dtimings, mostly including time
  spent in subprocesses like preprocessors
  (Valentin Gatien-Baron, review by Gabriel Scherer)

- GPR#1015: add option "-plugin PLUGIN" to ocamldep too. Use compilerlibs
  to build ocamldep.
  (Fabrice Le Fessant)

### Standard library:

- PR#6975, GPR#902: Truncate function added to stdlib Buffer module
  (Dhruv Makwana, review by Alain Frisch and Gabriel Scherer)

- GPR#760: Add a functions List.compare_lengths and
  List.compare_length_with to avoid full list length computations
  (Fabrice Le Fessant)

- GPR#778: Arg: added option Expand that allows to expand a string
  argument to a string array of new arguments
  (Bernhard Schommer)

- GPR#849: Exposed Spacetime.enabled value
  (Leo White)

- GPR#885: Option-returning variants of stdlib functions
  (Alain Frisch, review by David Allsopp and Bart Jacobs)

- GPR#869: Add find_first, find_first_opt, find_last, find_last_opt to
  maps and sets.  Find the first or last binding or element
  satisfying a monotonic predicate.
  (Gabriel de Perthuis, with contributions from Alain Frisch, review by
  Hezekiah M. Carty and Simon Cruanes, initial report by Gerd Stolpmann)

- GPR#875: Add missing functions to ArrayLabels, BytesLabels,
  ListLabels, MoreLabels, StringLabels so they are compatible with
  non-labeled counterparts.
  (Roma Sokolov)

- GPR#999: Arg, do not repeat thrice usage_msg when reporting an error
  (Florian Angeletti, review by Gabriel Scherer)

- GPR#1042: Fix escaping of command-line arguments in
  Unix.create_process{,_env} under Windows.  Arguments with tabs should now
  be received verbatim by the child process.
  (Nicolas Ojeda Bar, Andreas Hauptmann review by Xavier Leroy)

### Debugging and profiling:

- PR#7258: ocamldebug's "install_printer" command had problems with
  module aliases
  (Xavier Leroy)
